packages/fxa-content-server/app/styles/modules/_settings.scss
/* ... */
// settings header controls
#fxa-settings-header-wrapper {
  background: $color-white;
  border-bottom: 1px solid $input-border-disabled-color;

  @include respond-to('big') {
    height: 64px;
  }

  @include respond-to('small') {
    height: 48px;
  }

  #fxa-manage-account {
    @include hidpi-background-image('firefox', 80px 85px);
    background-repeat: no-repeat;
    margin: 0;

    html.fx-57 & {
      background-image: image-url('firefox-logo.svg');
      background-position-y: -5px;
      @include respond-to('small') {
        background-position-y: -4px;
      }
    }

    html[dir='ltr'] & {
      float: left;
    }

    html[dir='rtl'] & {
      float: right;
    }

    @include respond-to('big') {
      background-size: 36px auto;
      height: 64px;
      line-height: 63px;

      html[dir='ltr'] & {
        background-position: left 11px;
        padding-left: 48px;
      }

      html[dir='rtl'] & {
        background-position: right 11px;
        padding-right: 48px;
      }
    }

    @include respond-to('small') {
      background-size: 32px auto;
      height: 48px;
      line-height: 50px;

      html[dir='ltr'] & {
        background-position: left 8px;
        padding-left: 36px;
      }

      html[dir='rtl'] & {
        background-position: right 8px;
        padding-right: 36px;
      }
    }
  }

  .settings-button {
    display: block;
    height: 30px;

    html[dir='ltr'] & {
      float: right;
    }

    html[dir='rtl'] & {
      float: left;
    }

    @include respond-to('big') {
      margin-top: 15px;
      width: 100px;
    }

    @include respond-to('small') {
      margin-top: 9px;
      min-width: 29%;
    }
  }

  .settings-success-wrapper {
    z-index: 2;

    @include respond-to('big') {
      left: 50%;
      margin: 0 0 0 -250px;
      position: absolute;
      top: 64px;
      width: 500px;
    }

    @include respond-to('small') {
      left: 0;
      margin: 0;
      position: fixed;
      top: 0;
      width: 100%;
    }
  }

  .settings-success {
    background-color: $settings-success-background-color;
    border-color: $settings-success-border-color;
    border-style: solid;
    color: $success-text-color;
    margin: 0 auto;
    text-align: center;
    top: 0;

    @include respond-to('big') {
      border-radius: 0 0 $small-border-radius $small-border-radius;
      border-width: 0 1px 1px;
    }

    @include respond-to('small') {
      border-width: 0 0 1px 0;
      width: 100%;
    }

    a {
      color: $success-text-color;
    }
  }
}


// settings buttons
.settings-button {
  @include font();
  border-radius: $small-border-radius;
  cursor: pointer;
  font-size: $base-font;
  transition-duration: $short-transition;
  transition-property: background-color;

  .button-row & {
    @extend .settings-button;
    margin: 0;
    padding: 0;

    @include respond-to('big') {
      height: 45px;
      width: 48%;
    }

    @include respond-to('small') {
      height: 40px;
      width: 48%;
    }

    &:last-child {

      html[dir='ltr'] & {
        float: right;

        &.unpaired {
          float: none;
        }
      }

      html[dir='rtl'] & {
        float: left;

        &.unpaired {
          float: none;
        }
      }

    }
  }

  &.settings-unit-toggle,
  &.settings-unit-loading {
    display: block;
    height: 35px;

    @include respond-to('big') {
      width: 100px;
    }

    @include respond-to('small') {
      width: 29%;
    }
  }

  &.primary {
    background: $button-background-color;
    border: solid 1px $button-border-default-color;
    color: $message-text-color;

    &:hover {
      background: $button-background-hover-color;
      border-color: $button-border-hover-color;
    }

    &:active {
      background: $button-background-active-color;
      border-color: $button-border-active-color;
    }

    &:focus {
      box-shadow: 0 0 0 2px $button-box-shadow-color;
    }

    &:disabled,
    &.disabled {
      background: $button-background-default-color;
      border: solid 1px $button-border-disabled-color;
      color: $button-disabled-color;
    }
  }

  &.secondary {
    background: $secondary-button-background-color;
    border: 1px solid $secondary-button-border-color;
    color: $text-color;

    &:hover {
      background: darken($secondary-button-background-color, 10);
      border-color: $button-border-disabled-color;
    }

    &:active {
      background: $button-border-disabled-color;
      border-color: $color-grey-dark;
      color: $color-black;
    }

    &:focus {
      background: $secondary-button-background-color;
      border-color: $html-background-color;
      box-shadow: 0 0 0 2px $button-box-shadow-color;
    }

    &:disabled,
    &.disabled {
      background: $button-background-default-color;
      border: solid 1px $button-border-disabled-color;
      color: $button-disabled-color;
      opacity: 0.5;
    }
  }

  &.secondary-disabled {
      background: $secondary-button-background-color;
      border: 1px solid $secondary-button-border-color;
      color: $text-color;
  }

  &.warning {
    background: $error-background-color;
    border: 0;
    color: $message-text-color;

    &:hover {
      background: darken($error-background-color, 5);
    }

    &:active {
      background: darken($error-background-color, 10);
    }

    &:focus {
      box-shadow: 0 0 0 2px rgba(lighten($error-background-color, 15), .75);
    }

    &:disabled,
    &.disabled {
      background: $button-background-default-color;
      border: solid 1px $button-border-disabled-color;
      color: $button-disabled-color;
    }
  }

  &.unpaired {
    width: 100%;
  }
}
/* ... */

